fix: add/delete methods, vertical alignment of modal layout

--- a/src/components/cart/style.css
+++ b/src/components/cart/style.css
@@ -1,23 +1,3 @@
-.Cart-overlay {
-  background-color: rgba(0, 0, 0, 0.7);
-  height: 100vh;
-  width: 100vw;
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-
-.Cart {
-  position: absolute;
-  width: 66.67%;
-  left: calc(50% - 66.67% / 2);
-  top: 14.65vw;
-  background-color: #FFFFFF;
-  padding-bottom: 90px;
-  border-radius: 10px;
-  overflow: hidden;
-}
-
 .Cart-total {
   padding: 20px 120px 0 0;
   display: flex;
